# cad-phantoms

./: .gitignore  README.md  nema_phantom_filled.step  nema_wagi.py  pyproject.toml
